added mongoose, set up server file (app.js), running on port 4000

--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "501N",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.4",
+    "mongoose": "^5.4.10"
+  }
 }
