--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-handlebars": "^3.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.4.10",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "path": "^0.12.7"
   }
 }
