--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.4.10",
     "nodemon": "^1.18.9",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pg": "^7.8.0"
   }
 }
